# obssdk

./: .gitignore  CMakeLists.txt  README.en.md  README.md
UI/: CMakeLists.txt
broadcast-engine/: CMakeLists.txt
broadcast-engine/sources/: BroadcastEngineImpl.h  IBroadcastEngine.h  PublicHeader.h  ScenePreview.h  SourceManager.h  display-helpers.h
broadcast-engine/sources/SourceProperty/: AppWindowCaptureSourcePropertyImpl.cpp  AreaCaptureSourceProperty.cpp  MonitorCaptureSourcePropertyImpl.h  WindowCaptureSourcePropertyImpl.cpp
broadcast-engine/sources/platform/: platform-osx.mm  platform-windows.cpp  platform-x11.cpp
broadcast-engine2/: CMakeLists.txt
broadcast-engine2/sources/: BroadcastEngineImpl.cpp  SceneManager.cpp  SceneManager.h  ScenePreview.cpp  SourceManager.cpp  audio-encoders.cpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp
broadcast-engine2/sources/SourceProperty/: AppWindowCaptureSourcePropertyImpl.h  AreaCaptureSourceProperty.h  AudioSourcePropertyImpl.cpp  AudioSourcePropertyImpl.h  MonitorCaptureSourcePropertyImpl.cpp  VideoSourcePropertyImpl.cpp  VideoSourcePropertyImpl.h
broadcast-engine2/sources/platform/: platform.hpp
broadcast-test/: CMakeLists.txt
broadcast-test/sources/: MicrophoneVolumeCtrl.cpp  MicrophoneVolumeCtrl.h  OBSSettingWindow.cpp  OBSSettingWindow.h  PreviewBase.cpp  PreviewBase.h  main.cpp
broadcast-test/sources/BroadcastEngine/: BroadcastEngine.cpp  BroadcastEngine.h
broadcast-test/sources/area_capture/: AreaCaptureFrame.cpp  AreaCaptureFrame.h  AreaCaptureRect.cpp  AreaCaptureRect.h  HandleLabel.cpp  HandleLabel.h
broadcast-test/sources/eos/: EosObserver.cpp  EosObserver.h  EosObserverScheduler.cpp  EosObserverScheduler.h
broadcast-test/ui/: AreaCaptureFrame.ui  MainWindow.ui  OBSSettingWindow.ui
libobs/: CMakeLists.txt  obs-audio-controls.c  obs-source.c  obs-source.h  obs.h
plugins/: CMakeLists.txt
plugins/area-capture/: CMakeLists.txt  dc-capture.h  duplicator-monitor-capture.c  game-capture.c  monitor-capture.c  plugin-main.c  window-capture.c
plugins/win-capture/: window-capture.c  window-helpers.c  window-helpers.h
plugins/win-dshow/: ffmpeg-decode.c
